--- a/index.html
+++ b/index.html
@@ -79,39 +79,52 @@
 		<section class="light section">
 			<h2 class="section-header">Music</h2>
 			<div class="box">
-				<div>
-					<h3>Monumenta Polyphoniae</h3>
-					<table>
-						<tr>
-							<td class="author">Palestrina</td>
-							<td class="title">Missa Papae Marcelli</td>
-						</tr>
-						<tr>
-							<td class="author"></td>
-							<td class="title">Canticum Canticorum</td>
-						</tr>
-						<tr>
-							<td class="author">Victoria</td>
-							<td class="title">Officium Defunctorum</td>
-						</tr>
-						<tr>
-							<td class="author">Lassus</td>
-							<td class="title">Prophetiae Sibyllarum</td>
-						</tr>
-						<tr>
-							<td class="author"></td>
-							<td class="title">Lagrime di San Pietro</td>
-						</tr>
-						<tr>
-							<td class="author"></td>
-							<td class="title">Lamentationes Hieremiae Prophetae</td>
-						</tr>
-						<tr>
-							<td class="author">Gesualdo</td>
-							<td class="title">Tenebrae Responsoria</td>
-						</tr>
-					</table>
-				</div>
+				<h3 class="subheader">Monumenta Polyphoniae</h3>
+				<ul class="music-list">
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Palestrina</span>
+							<span class="title">Missa Papae Marcelli</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Palestrina</span>
+							<span class="title">Canticum Canticorum</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Victoria</span>
+							<span class="title">Officium Defunctorum</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Lassus</span>
+							<span class="title">Prophetiae Sibyllarum</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Lassus</span>
+							<span class="title">Lagrime di San Pietro</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Lassus</span>
+							<span class="title">Lamentationes Hieremiae Prophetae</span>
+						</a>
+					</li>
+					<li class="music-item">
+						<a href="./files/program.jpg" class="music-link">
+							<span class="author">Gesualdo</span>
+							<span class="title">Tenebrae Responsoria</span>
+						</a>
+					</li>
+				</ul>
+
 				<div class="about-box-right">
 					<img src="./photos/pe_music_w768.jpg" alt="Polyphonica Ensemble" />
 				</div>
@@ -132,13 +145,12 @@
 		<section class="light section">
 			<h2 class="section-header">Contact</h2>
 			<div class="box">
-				<div>
-					Antonina Ruda
-					<a href="tel:+48889487157">+48 889 487 157</a>
-					<a href="mailto:info@polyphonicaensemble.pl">
-						info@polyphonicaensemble.pl
-					</a>
-					<div class="media-wrapper">
+				<ul class="contact-list">
+					<li class="contact-item">Antonina Ruda</li>
+					<li class="contact-item"><a href="tel:+48889487157" class="contact-link">+48 889 487 157</a></li>
+					<li  class="contact-item"><a href="mailto:info@polyphonicaensemble.pl" class="contact-link">info@polyphonicaensemble.pl</a></li>
+					<li class="contact-media">
+						<div class="media-wrapper">
 						<a
 							href="https://www.instagram.com/polyphonica_ensemble/"
 							class="media-link"
@@ -157,17 +169,17 @@
 								<use href="./photos/icons.svg#icon-facebook"></use>
 							</svg>
 						</a>
-					</div>
+					</div></li>
+
+
 				</div>
 			</div>
 			<img src="./photos/pe_creators_w768.jpg" alt="Polyphonica Ensemble" />
 		</section>
-		<footer class="dark section">
+		<footer class="dark section"><div class="footer">
 			photography by Klaudyna Schubert
-			<br />
-			design by Dominik Czernik
-			<br />
-			development by Marta Majnusz
+			| design by Dominik Czernik
+			| development by Marta Majnusz</div>
 		</footer>
 
 		<div class="menu-container js-menu-container" id="mobile-menu">
