--- a/index.html
+++ b/index.html
@@ -43,13 +43,7 @@
 		<section class="dark section">
 			<h2 class="section-header">About us</h2>
 			<div class="box">
-				<div class="about-box-left">
-					<img src="./photos/pe_about_w768.jpg" alt="Polyphonica Ensemble" />
-
-					<h3>jedność w wielości, wielość w jedności</h3>
-				</div>
-
-				<div class="about-box-right">
+								<div class="about-box-right">
 					<p class="text-block-pl">
 						Polyphonica Ensemble, nowa, ożywcza formacja, skupiona na
 						arcydziełach wokalnej polifonii. Członkowie, doświadczeni muzycy,
@@ -64,6 +58,7 @@
 						szablonów, utartych ​ścieżek, upaja się pięknem ludzkiego głosu i
 						zawiłą sztuką polifonicznego ​kontrapunktu.
 					</p>
+					<p class="text-block-center">*</p>
 					<p class="text-block-en">
 						Polyphonica Ensemble is a newly established group focused on
 						performing the masterpieces ​of vocal polyphony. Its members are
@@ -75,6 +70,13 @@
 						of the human voice and the complex art of ​polyphonic counterpoint.
 					</p>
 				</div>
+				<div class="about-box-left">
+
+					<img src="./photos/pe_about_w768.jpg" alt="Polyphonica Ensemble" />
+
+
+				</div>
+				<h3 class="subheader dark-sky">jedność w wielości, wielość w jedności</h3>
 			</div>
 		</section>
 
