--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 	</head>
 
 	<body>
-		<header>
+		<header class="header-nav">
+			<!-- <div class="header-logo-wrapper"><img src="./photos/logo_w80.jpg" alt="logo" class="logo"/></div> -->
 			<ul class="menu">
 				<li><a href="" class="nav-link">About us</a></li>
 				<li><a href="" class="nav-link">Music</a></li>
 				<li><a href="" class="nav-link">Gallery</a></li>
 				<li><a href="" class="nav-link">Contact</a></li>
 			</ul>
+
+			<button class="menu-toggle js-open-menu menu-button" type="button">
+				<svg width="20" height="20" class="svg-dark">
+					<use href="./photos/icons.svg#icon-menu" ></use>
+				</svg>
+			</button>
+
+
 		</header>
 		<section class="light section">
 			<div class="main-img-wrapper">
