--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 		<div class="menu-container js-menu-container" id="mobile-menu">
 			<button class="menu-toggle js-close-menu menu-button-x" type="button">
-				<svg width="8" height="8" class="svg-dark">
+				<svg width="20" height="20" class="svg-dark">
 					<use href="./photos/icons.svg#icon-close"></use>
 				</svg>
 			</button>
@@ -205,23 +205,23 @@
 				<li><a href="" class="nav-link">Music</a></li>
 				<li><a href="" class="nav-link">Gallery</a></li>
 				<li><a href="" class="nav-link">Contact</a></li>
-			</ul>
-
-			<ul class="list menu-media">
 				<li class="media-wrapper">
-					<a href="" class="footer-link">
-						<svg width="24" height="24" class="media-icon">
+					<a href="https://www.instagram.com/polyphonica_ensemble/" class="media-link">
+						<svg width="24" height="24" class="svg-dark">
 							<use href="./photos/icons.svg#icon-instagram"></use>
 						</svg>
-					</a>
-				</li>
+					</a></li>
 				<li class="media-wrapper">
-					<a href="" class="footer-link">
-						<svg width="24" height="24" class="media-icon">
+					<a href="https://www.facebook.com/profile.php?id=61562280217798" class="media-link">
+						<svg width="24" height="24" class="svg-light">
 							<use href="./photos/icons.svg#icon-facebook"></use>
 						</svg>
 					</a>
 				</li>
+			</ul>
+
+			<ul class="list menu-media">
+
 			</ul>
 		</div>
 		<script
