--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 	</head>
 
 	<body>
-		<header class="header-nav header-sky">
+		<header class="header-nav">
 			<!-- <div class="header-logo-wrapper"><img src="./photos/logo_w80.jpg" alt="logo" class="logo"/></div> -->
-			<h1 class="header-mobile">polyphonica ensemble</h1>
+
 			<ul class="mobile-hidden">
 				<li><a href="" class="nav-link">About us</a></li>
 				<li><a href="" class="nav-link">Music</a></li>
@@ -33,15 +33,19 @@
 		</header>
 
 		<section class="light section">
+			<div class="header-image">
+
 			<img
-				src="./photos/pe_main_cropped_w768.jpg"
+				src="./photos/pe_main_w768.jpg"
 				srcset="
-					./photos/pe_main_cropped_w768.jpg  768w,
+					./photos/pe_main_w768.jpg  768w,
 					./photos/pe_main_w1200.jpg        1200w,
 					./photos/pe_main_w2000.jpg        2000w
 					"
 				alt="Polyphonica Ensemble"
 				/>
+				<h1 class="header-mobile">polyphonica ensemble</h1>
+				</div>
 			<div class="box mobile-hidden">
 				<h1>polyphonica ensemble</h1>
 			</div>
