--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 		</section>
 
 		<section class="dark section">
-			<h2 class="section-header">About us</h2>
+			<h3 class="dark-sky">jedność w wielości, wielość w jedności</h3>
+			<h2 class="section-header mobile-hidden">About us</h2>
 			<div class="box">
 								<div class="about-box-right">
 					<p class="text-block-pl">
@@ -86,9 +87,9 @@
 					<img src="./photos/pe_about_w768.jpg" alt="Polyphonica Ensemble" />
 
 
-				</div>
-				<h3 class="subheader dark-sky">jedność w wielości, wielość w jedności</h3>
-			</div>
+
+
+
 		</section>
 
 		<section class="light section">
